--- a/redux/package.json
+++ b/redux/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "red": "^0.0.1",
+    "redux": "^5.0.1",
     "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
